src/styles/player_home.less
/* ... */
.with-turmoil {
    .ma-name--terraformer {
        background-image: url(assets/ma/terraformer26.png) !important;
    }
}

.ma-player-cube .board-cube {
    margin: 0 0 0 5px;
}

.milestone-award-inline {
    white-space: nowrap;
    color: #000;
    text-transform: uppercase;
    padding: 1px 33px 1px 10px;
    width: 190px;
    height: 25px;
    letter-spacing: 1px;
    text-align: center;
    font-size: 16px;
    line-height: 23px;
    font-weight: bold;
    margin: 0 5px 0 5px;
    border-radius: 2px;
    display: inline-block;
    &.paid{
        background: linear-gradient(to right, #e28c22, #ffcc64, #e28c22);
    }
    &.unpaid {
        background: #303030;
    }
}
.milestone-award-price {
    background-image: url(./assets/resources/megacredit.png);
    width: 30px;
    height: 30px;
    line-height: 30px;
    background-size: 30px;
    margin-top: -3px;
    margin-left: 70px;
    transform: scale(0.8);

    font-family: Prototype;
    color: black;
    font-weight: normal;
    font-size: 18px;
    text-align: center;
}


.active-award-or-milestone {
    color: #000;
    text-transform: uppercase;
    background: #c2c2c2;
    padding: 3px 30px 2px 7px;
    font-size: 15px;
    font-weight: bold;
}

.player_home_block--setup {
    .wf-action {
        margin: 20px 0 40px;
        text-align: center;

        .btn-primary {
            font-size: 25px;
            height: 50px;
            width: 150px;
        }
    }

    .board-accordion {
        padding-bottom: 20px;
    }
    .accordion-body {
        padding-left: 40px;
    }
}

.player_home_colony_cont {
    margin: 0 auto;

    .player_home_colony {
        display: inline-block;
        vertical-align: top;
        margin: 0px 0px 10px 0px;
    }
}

.colonies-fleets-cont {
    position: absolute;
    margin: -62px 0 0 160px;
}

.colonies-player-fleets {
    height: 70px;
    display: inline-block;
    vertical-align: top;
}

.colonies-fleet {
    background: url(assets/colonies/colony_ships.png) no-repeat;
    width: 70px;
    height: 70px;
    display: inline-block;
    vertical-align: top;

    &.colonies-fleet-black {
        background-position: 0 0;
    }

    &.colonies-fleet-yellow {
        background-position: -70px 0;
    }

    &.colonies-fleet-green {
        background-position: -140px 0;
    }

    &.colonies-fleet-red {
        background-position: -207px 0;
    }

    &.colonies-fleet-blue {
        background-position: -272px 0;
    }

    &.colonies-fleet-purple {
        background-position: -342px 0;
    }

    &.colonies-fleet-orange {
        background-position: -416px 0;
    }

    &.colonies-fleet-pink {
        background-position: -490px 0;
    }
}

.deck-size {
    position: absolute;
    width: 33px;
    margin: 30px 0 0 0;
    font-family: Prototype;
    font-size: 15px;
    text-align: center;
    color: #fff;
}

.label-additional {
    font-family: "Ubuntu";
    background: #222;
    padding: 2px 8px;
    border-radius: 8px;
    text-transform: uppercase;
    text-shadow: none;
    margin-left: 12px;
}

.last-generation {
    color: red;
}

@keyframes smoth-fade-animation {
    from { opacity: 1.0; }
    50% { opacity: 0.2; }
    to { opacity: 1.0; }
}

.blink-animation {
  animation:smoth-fade-animation 2000ms infinite;
}

.top-bar {
    position: sticky;
    margin: -40px 0 0 auto;
    margin-bottom: 15px;
    z-index: 20;
    top: -12px;
    display: flex;

    .top-bar-collapser {
        background: #303030;
        display: inline-block;
        vertical-align: middle;
        padding: 8px 14px 8px 11px;
        border-radius: 0 10px 10px 0;
        height: 46px;
        cursor: pointer;
        margin-top: 12px;

        img {
            width: 20px;
        }
    }

    .player-status, .player-info-top {
        display: none !important;
    }
    .player-info-bottom {
        background: #303030 !important;
    }

    .player-info {
        background: #303030 !important;
        border-radius: 0 !important;
        border: 1px solid #ffffff2e;
        filter: drop-shadow(0 0 3px #ffffff2e);

        .player-status-and-res {
            min-width: 564px !important;
        }
    }
}

.top-bar-collapsed {
    margin: -32px 0 0 -20px;

    .player-info {
        display: none;
    }

    .top-bar-collapser {
        margin: 11px 0 0 0;

        img {
            transform: scaleX(-1);
        }
    }
}

.hiding-card-button-row {
    display: flex;
    flex-flow: row;
}

.hiding-card-button {
    display: flex;
    width: fit-content;
    padding: 2px 4px;
    text-transform: uppercase;
    border-radius: 4px;
    color: white;
    cursor: pointer;
    font-size: 16px;
    margin: 5px;
    padding: 0px 8px;

    &.active {
        background-color: rgba(47,146,225, 0.75);
    }
    &.automated {
        background-color: rgba(13,176,11, 0.75);
    }
    &.event {
        background-color: rgba(237,106,21, 0.75);
    }
    &.active-transparent {
        background-color: rgba(47,146,225, 0.5);
    }
    &.automated-transparent {
        background-color: rgba(13,176,11, 0.5);
    }
    &.event-transparent {
        background-color: rgba(237,106,21,0.5);
    }
}

.select-initial-cards {
    .megacredits {
        display: inline-block;
        font-size: 26px;
        width: 50px;
        height: 50px;
        line-height: 48px;
        border-radius: 10px;
        text-align: center;
        background-image: url(./assets/resources/megacredit.png);
        background-size: 50px;
        filter: drop-shadow(0px 0px 1px black);
        font-family: Prototype;
        color: #000;
    }
}

